@@ -2,6 +2,9 @@
 Change log for mod_reader
 ========================================
 
+2023-02-19 (40)
+ - when showing user profile pictures on Moodle >= 3.11, use 
+
 2023-02-18 (39)
  - fix permissions for displaying and acceessing the checkboxes on reports pages
 
